# jenkins_client

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  action.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  pre_commit_checks.yml
.pre-commit/: .isort.cfg  .pylintrc  .secrets.baseline  pyproject.toml  setup.cfg
jenkins_client/: README.md  __init__.py  client.py
