[project]
name = "jenkins_client"
description = "A python client to trigger Jenkins jobs"
version = "1.3.3"
authors = [
    { name = "Yorgos Katsaros", email = "yorgos.katsaros@gmail.com" }
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.3.3"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version"
]
update_changelog_on_bump = true
